# ai-debug-assistant

./: .gitignore  README.md  ai_service.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  test_gemini_model.py
static/css/: auth.css  main.css
templates/: index.html  login.html  register.html
