[project]
name = "new-ai-debug-asisstant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
